--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@wdio/cli": "^8.21.0",
-    "@wdio/local-runner": "^8.21.0",
-    "@wdio/mocha-framework": "^8.21.0",
-    "@wdio/spec-reporter": "^8.21.0",
-    "wdio-wait-for": "^3.0.7"
+    "@wdio/allure-reporter": "^9.0.8",
+    "@wdio/cli": "^9.0.9",
+    "@wdio/local-runner": "^9.0.9",
+    "@wdio/mocha-framework": "^9.0.8",
+    "@wdio/spec-reporter": "^9.0.8",
+    "@wdio/visual-service": "^6.0.0",
+    "wdio-mochawesome-reporter": "^6.1.1",
+    "wdio-wait-for": "^3.0.11"
   }
 }
