--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@wdio/allure-reporter": "^9.0.8",
-    "@wdio/cli": "^9.0.9",
-    "@wdio/local-runner": "^9.0.9",
-    "@wdio/mocha-framework": "^9.0.8",
-    "@wdio/spec-reporter": "^9.0.8",
-    "@wdio/visual-service": "^6.0.0",
-    "wdio-mochawesome-reporter": "^6.1.1",
-    "wdio-wait-for": "^3.0.11"
+    "@wdio/cli": "^9.16.2",
+    "@wdio/local-runner": "^9.16.2",
+    "@wdio/mocha-framework": "^9.16.2",
+    "@wdio/spec-reporter": "^9.16.2"
   }
 }
